// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> should render as expected 1`] = `
<RCTSlider
  disabled={false}
  enabled={true}
  maximumValue={1}
  minimumValue={0}
  onResponderTerminationRequest={[Function]}
  onSlidingComplete={null}
  onStartShouldSetResponder={[Function]}
  onValueChange={null}
  step={0}
  style={
    Object {
      "height": 40,
    }
  }
  value={0.5}
/>
`;

exports[`<Slider /> should set disabled as false 1`] = `
<RCTSlider
  disabled={false}
  enabled={true}
  maximumValue={1}
  minimumValue={0}
  onResponderTerminationRequest={[Function]}
  onSlidingComplete={null}
  onStartShouldSetResponder={[Function]}
  onValueChange={null}
  step={0}
  style={
    Object {
      "height": 40,
    }
  }
  value={0.5}
/>
`;

exports[`<Slider /> should set disabled as false 2`] = `
<RCTSlider
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  disabled={false}
  enabled={true}
  maximumValue={1}
  minimumValue={0}
  onResponderTerminationRequest={[Function]}
  onSlidingComplete={null}
  onStartShouldSetResponder={[Function]}
  onValueChange={null}
  step={0}
  style={
    Object {
      "height": 40,
    }
  }
  value={0.5}
/>
`;

exports[`<Slider /> should set disabled as true 1`] = `
<RCTSlider
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  disabled={true}
  enabled={false}
  maximumValue={1}
  minimumValue={0}
  onResponderTerminationRequest={[Function]}
  onSlidingComplete={null}
  onStartShouldSetResponder={[Function]}
  onValueChange={null}
  step={0}
  style={
    Object {
      "height": 40,
    }
  }
  value={0.5}
/>
`;

exports[`<Slider /> should set disabled as true 2`] = `
<RCTSlider
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  disabled={true}
  enabled={false}
  maximumValue={1}
  minimumValue={0}
  onResponderTerminationRequest={[Function]}
  onSlidingComplete={null}
  onStartShouldSetResponder={[Function]}
  onValueChange={null}
  step={0}
  style={
    Object {
      "height": 40,
    }
  }
  value={0.5}
/>
`;
